# Basic-Neural-Network

./: CMakeLists.txt  NeuralNetwork.cpp  NeuralNetwork.h  README.md  bindings.cpp
